Fixed layout issues

--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -101,7 +101,7 @@ $header-nav-link-color-hover: $blue;
 
 // Reduced layout
 .l-reduced .l-header {
-  padding: 1em 0 1.4em;
+  padding: 0.7em 0 1em;
   background-color: $sand;
 
   .l-header-logo span {
